<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>spec</groupId>
    <artifactId>emulator</artifactId>
    <version>1.0</version>
    <packaging>war</packaging>

    <properties>
        <module.name>emulator</module.name>

        <java.version>8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Production -->

        <!-- Testing -->
        <junit.version>4.13.2</junit.version>
        <mockito.version>4.2.0</mockito.version>

        <!-- Maven -->
        <maven-compiler.version>3.8.1</maven-compiler.version>
        <maven-resources.version>3.2.0</maven-resources.version>
        <maven-jar.version>3.2.0</maven-jar.version>
        <maven-jetty.version>11.0.7</maven-jetty.version>

        <jetty-webapp-folder>target/webapp-synth</jetty-webapp-folder>
    </properties>

    <dependencies>
        <!-- Production -->

        <!-- Testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources.version}</version>
                <executions>
                    <execution>
                        <!-- Плагин отвечает за копирование ресурсов
                             в для jetty -->
                        <id>[##1]-copy-resources</id>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                            <outputDirectory>${jetty-webapp-folder}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <includes>
                                        <include>**/*</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <executions>
                    <execution>
                        <!-- Плагин отвечает за компиляцию
                             классов -->
                        <id>[##2]-compile-java</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                </executions>
                <configuration>
                    <encoding>utf8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar.version}</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <!-- Плагин отвечает за сборку jar
                             файла -->
                        <id>[##3]-make-jar</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <phase>process-classes</phase>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>${jetty-webapp-folder}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <!-- Плагин отвечает за запуск jetty -->
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>${maven-jetty.version}</version>
            </plugin>
        </plugins>
    </build>
</project>